gcc/testsuite/g++.dg/parse/typedef7.C
// PR c++/18285
typedef void int char void double X; // { dg-error "" } 
